[gd_scene format=3 uid="uid://cbpljhuwyvp8b"]

[ext_resource type="Script" uid="uid://dpudfs26gkbmr" path="res://addons/dialogic/Modules/StyleEditor/layout_scene_sidebar.gd" id="1_xui7s"]
[ext_resource type="Script" uid="uid://bgbpa4ax8w88y" path="res://addons/dialogic/Modules/StyleEditor/layout_scene_sidebar_property_tree.gd" id="2_nc5pf"]

[node name="LayoutSceneSidebar" type="MarginContainer" unique_id=2056312676]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 294.0
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_xui7s")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=2005906802]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer" unique_id=1267388966]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Dialogic Layout Scene Customizer"
autowrap_mode = 2

[node name="Note" type="Label" parent="VBoxContainer" unique_id=997426198]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Layout scenes can expose properties to the style editor for easier access."
autowrap_mode = 2

[node name="Internal" type="Label" parent="VBoxContainer" unique_id=1123826404]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "This is an internal Dialogic scene! Editing it directly means changes will be lost when updating the plugin!
Consider making a copy by customizing it. "
autowrap_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer" unique_id=1317499735]
visible = false
layout_mode = 2
item_count = 1
popup/item_0/id = 0

[node name="PropertyTree" type="Tree" parent="VBoxContainer" unique_id=73237039]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"TreeSecondary"
columns = 4
column_titles_visible = true
hide_root = true
script = ExtResource("2_nc5pf")

[node name="InfoLabel" type="Label" parent="VBoxContainer/PropertyTree" unique_id=1359787800]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 39.0
offset_right = -35.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
text = "Drag and drop properties from the inspector."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DropInfoLabel" type="Label" parent="VBoxContainer" unique_id=2051895423]
unique_name_in_owner = true
layout_mode = 2
text = "Hold CTRL when dropping to expose this property for all siblings as well."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AddCategory" type="Button" parent="VBoxContainer" unique_id=2028704367]
layout_mode = 2
text = "Add Category"

[node name="Print" type="Button" parent="VBoxContainer" unique_id=1297190525]
visible = false
layout_mode = 2
text = "Print"

[node name="AddGroup" type="Button" parent="VBoxContainer" unique_id=452177189]
visible = false
layout_mode = 2
text = "Add Category"

[connection signal="button_clicked" from="VBoxContainer/PropertyTree" to="VBoxContainer/PropertyTree" method="_on_button_clicked"]
[connection signal="changed" from="VBoxContainer/PropertyTree" to="." method="_on_property_tree_changed"]
[connection signal="column_title_clicked" from="VBoxContainer/PropertyTree" to="VBoxContainer/PropertyTree" method="_on_column_title_clicked"]
[connection signal="item_edited" from="VBoxContainer/PropertyTree" to="VBoxContainer/PropertyTree" method="_on_item_edited"]
[connection signal="mouse_exited" from="VBoxContainer/PropertyTree" to="VBoxContainer/PropertyTree" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/AddCategory" to="." method="_on_add_category_pressed"]
[connection signal="pressed" from="VBoxContainer/Print" to="." method="_on_print_pressed"]
[connection signal="pressed" from="VBoxContainer/AddGroup" to="." method="_on_add_category_pressed"]
